--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             width: 100%; 
             max-width: 400px; 
             overflow-y: auto;
-            max-height: 45dvh;
+            max-height: 40dvh;
         }
 
         .key-red { color: #ff3b30 !important; font-weight: 900 !important; text-shadow: 0 0 8px #ff3b30, 0 0 15px rgba(255,59,48,0.5) !important; display: inline-block; }
@@ -66,7 +66,6 @@
 
         #splash { position: fixed; inset: 0; background: #000; z-index: 99999; display: flex; flex-direction: column; align-items: center; justify-content: center; cursor: pointer; }
         .heart-svg { width: 100px; height: 100px; fill: #ff3b30; filter: drop-shadow(0 0 20px #ff3b30); animation: heartbeat 1.2s infinite; }
-        @keyframes heartbeat { 0%, 100% { transform: scale(1); } 50% { transform: scale(1.2); } }
 
         .explosion-grid { 
             display: grid; 
@@ -81,42 +80,40 @@
             border-radius: 12px; 
             object-fit: contain; 
             background: rgba(255,255,255,0.05);
-            border: 2px solid #fff; 
+            border: 1px solid rgba(255,255,255,0.3); 
             transform: scale(0); 
             opacity: 0; 
         }
         .page.active .photo-pop { animation: explode 0.6s cubic-bezier(0.17, 0.89, 0.32, 1.28) forwards; }
         @keyframes explode { to { transform: scale(1); opacity: 1; } }
 
-        /* Ajuste de proporção no Modal para não ocupar a tela inteira */
         #photo-modal { 
             position: fixed; 
             inset: 0; 
-            background: rgba(0,0,0,0.92); 
+            background: rgba(0,0,0,0.98); 
             z-index: 100000; 
             display: none; 
-            flex-direction: column;
             align-items: center; 
             justify-content: center; 
         }
         .modal-img { 
-            max-width: 85%; 
-            max-height: 60%; 
+            max-width: 95%; 
+            max-height: 80%; 
             object-fit: contain; 
-            border-radius: 10px; 
-            box-shadow: 0 0 30px rgba(0,0,0,0.5);
         }
         .inner-pop-text { 
-            margin-top: 20px;
+            position: absolute;
+            bottom: 40px;
             width: 85%; 
-            background: rgba(15, 15, 15, 0.9); 
+            background: rgba(0, 0, 0, 0.85); 
             padding: 15px; 
             border-radius: 15px; 
-            border: 1px solid #007aff; 
+            border: 1px solid var(--neon-blue); 
             text-align: center; 
             font-size: 0.85rem; 
+            backdrop-filter: blur(10px);
         }
-        .close-modal { position: absolute; top: 20px; right: 20px; background: #ff3b30; border: none; color: #fff; width: 40px; height: 40px; border-radius: 50%; font-weight: bold; }
+        .close-modal { position: absolute; top: 25px; right: 25px; background: #ff3b30; border: none; color: #fff; width: 40px; height: 40px; border-radius: 50%; font-weight: bold; z-index: 100001; }
 
         .nav-controls { position: fixed; bottom: 20px; width: 100%; display: flex; justify-content: center; align-items: center; gap: 20px; z-index: 10001; }
         .nav-btn { background: rgba(0,122,255,0.1); border: 1px solid #007aff; color: #fff; width: 45px; height: 45px; border-radius: 50%; }
@@ -195,33 +192,22 @@
     function startJourney() {
         document.getElementById('splash').style.display = 'none';
         document.getElementById('controls').style.display = 'flex';
-        bgMusic.volume = 0.6; bgMusic.play();
+        
+        // Volume Gradual
+        bgMusic.volume = 0;
+        bgMusic.play();
+        let volInterval = setInterval(() => {
+            if (bgMusic.volume < 0.55) {
+                bgMusic.volume += 0.05;
+            } else {
+                bgMusic.volume = 0.6;
+                clearInterval(volInterval);
+            }
+        }, 250);
+
         typeWriter(TXT1, "type-p1", 40);
         setInterval(updateCounter, 1000);
         setupDots(); initStars();
-    }
-
-    function setupDots() {
-        const container = document.getElementById('dots');
-        pages.forEach((_, i) => {
-            let d = document.createElement('div');
-            d.className = `dot ${i===0?'active':''}`;
-            container.appendChild(d);
-        });
-    }
-
-    function nav(dir) {
-        const next = Math.max(0, Math.min(pages.length - 1, current + dir));
-        if (next === current) return;
-        pages[current].classList.remove('active');
-        current = next;
-        pages[current].classList.add('active');
-        document.getElementById('p-bar').style.width = ((current + 1) / pages.length) * 100 + "%";
-        document.querySelectorAll('.dot').forEach((d, i) => d.classList.toggle('active', i === current));
-        if(current === 1) { 
-            video.play(); 
-            if(!hasTypedP2) { typeWriter(TXT2, "type-p2", 20); hasTypedP2 = true; } 
-        } else { video.pause(); }
     }
 
     function typeWriter(text, elId, speed) {
@@ -276,6 +262,29 @@
             requestAnimationFrame(draw);
         }
         draw();
+    }
+
+    function setupDots() {
+        const container = document.getElementById('dots');
+        pages.forEach((_, i) => {
+            let d = document.createElement('div');
+            d.className = `dot ${i===0?'active':''}`;
+            container.appendChild(d);
+        });
+    }
+
+    function nav(dir) {
+        const next = Math.max(0, Math.min(pages.length - 1, current + dir));
+        if (next === current) return;
+        pages[current].classList.remove('active');
+        current = next;
+        pages[current].classList.add('active');
+        document.getElementById('p-bar').style.width = ((current + 1) / pages.length) * 100 + "%";
+        document.querySelectorAll('.dot').forEach((d, i) => d.classList.toggle('active', i === current));
+        if(current === 1) { 
+            video.play(); 
+            if(!hasTypedP2) { typeWriter(TXT2, "type-p2", 20); hasTypedP2 = true; } 
+        } else { video.pause(); }
     }
 
     let startX;
